--- a/tp1/index.html
+++ b/tp1/index.html
@@ -5,41 +5,38 @@
   <title>OnlineShop - Accueil</title>
 </head>
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
+  </header>
   <div id="homeTitle">
-    <h1>
-      <!--titre de la page d'aceuill-->
-    </h1>
+    <h1>OnlineShop</h1>
   </div>
 
   <div>
     <p>
-      <!--petit paragraphe de présentation de la page-->
-    </p>
+      Magsin en ligne de produits électroniques</p>
   </div>
 
   <div class="link">
-    <a href="assets/img/home.png"> Liste des produits</a>
+    <a href="products.html"> Liste des produits</a>
   </div>
 
-  <div>
-    <img src="home.png" alt="Home">
-  </div>
+  <img src="assets/img/home.png" alt="Home">
 
-  <div class="footer">
-    <!--Nom prénom et matricule de l'équipe. Quand tout le monde l'aura rempli on copie collera dans tout les autres fishier-->
-    <p>Marinier Thomas 20269869</p>
-    <p></p>
-    <p></p>
-    <p></p>
-  </div>
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
