--- a/tp1/confirmation.html
+++ b/tp1/confirmation.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
+
 <html lang="fr">
+
 <head>
+
   <meta charset="UTF-8">
+
   <title>OnlineShop - Confirmation</title>
+
+  <h1> OnlineShop </h1>
+
 </head>
+
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
-<!-- TODO -->
+  </header>
+
+  <section id="confirmation">
+
+    <h2>Confirmation d'achat</h2>
+
+    <p> Votre commande a été complétée avec succès. <br> 
+      Merci d'avoir commandé sur OnlineShop.
+    </p>
+  </section>
+
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
