--- a/tp1/contact.html
+++ b/tp1/contact.html
@@ -5,15 +5,24 @@
   <title>OnlineShop - Contact</title>
 </head>
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
+  </header>
 <!-- TODO -->
+<footer>
+  <p>Thomas Marinier 20269869</p>
+  <p>Nesma-Dalel Medjber 20280609</p>
+  <p>yanis Chalel 20252292</p>
+  <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+</footer>
 </body>
 </html>
