--- a/tp1/order.html
+++ b/tp1/order.html
@@ -5,15 +5,63 @@
   <title>OnlineShop - Commande</title>
 </head>
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
-<!-- TODO -->
+  </header>
+
+  <form action="confirmation.html" method="post">
+    <section>
+        <h2>Contact</h2>
+        <div id="identity">
+          <label for="firstname">Prénom :</label>
+          <input type="text" id="firstname" name="firstname" required>
+
+          <label for="lastname">Nom :</label>
+          <input type="text" id="lastname" name="lastname" required>
+        </div>
+
+        <div id="contact">
+          <label for="email">Adresse courriel :</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+
+        <div>
+          <label for="phone">Numéro de téléphone :</label>
+          <input type="tel" id="phone" name="phone" required>
+        </div>
+    </section>
+
+    <section>
+        <h2>Paiement</h2>
+        <div>
+          <label for="creditcard">Numéro de carte de crédit :</label>
+          <input type="text" id="creditcard" name="creditcard" required pattern="\d{16}">
+        </div>
+
+        <div>
+          <label for="creditcardexpiry">Date d'expiration de la carte :</label>
+          <input type="month" id="creditcardexpiry" name="creditcardexpiry" required>
+        </div>
+    </section>
+
+    <input type="submit" value="Payer">
+</form>
+
+
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
