--- a/tp1/product.html
+++ b/tp1/product.html
@@ -6,15 +6,18 @@
 </head>
 <body>
 
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
+  </header>
 
   <div class="presentoir">
     <h2>Apple-Tv</h2>
@@ -53,12 +56,18 @@
     </ul>
   </div>
 
-  <form id="class">
+  <form id="class" method="post" action="shopping-cart.html">
     <h4>Ajoutée au panier</h4>
     <label for="quantity">Quantity :</label>
     <input type="number" id="quantity" name="quantity" min="1" value="1" step="1">
-    <input type="submit" value="Submit">
+    <input type="submit" value="Order">
   </form>
   
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
