--- a/tp1/products.html
+++ b/tp1/products.html
@@ -7,15 +7,18 @@
 </head>
 
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div id="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
+  </header>
   <div id="BarreLateral">
 
     <div id="productCategories">
@@ -128,5 +131,12 @@
     </div>
     -->
   </div>
+
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
