--- a/tp1/shopping-cart.html
+++ b/tp1/shopping-cart.html
@@ -5,15 +5,18 @@
   <title>OnlineShop - Panier</title>
 </head>
 <body>
-  <div class="forhead">
-    <img src="assets/img/logo.svg" alt="logo">
+  <header>
+    <div id="logo">
+      <img src="assets/img/logo.svg" alt="logo">
+    </div>
+
     <div class="link">
-      <a href="index.html">Acceuil</a>
-      <a href="products.html">Produits</a>
-      <a href="contact.html">Contacts</a>
+      <a href="index.html">Acceuil</a><br>
+      <a href="products.html">Produits</a><br>
+      <a href="contact.html">Contacts</a><br>
       <a href="shopping-cart.html">Panier</a>
     </div>
-  </div>
+  </header>
 
   <div id="panier">
     <h2>Panier :</h2>
@@ -36,22 +39,62 @@
         </td>
         <td>249 $</td>
         <td>
-          <form>
+          <form method="post">
             <input type="number" id="quantity" name="quantity" min="1" value="1" step="1" size="2">
             <input type="submit" value="Submit">
           </form>
         </td>
         <td>249$</td>
       </tr>
-      <!--2 autres produits-->
+
+      <tr>
+        <td>
+          <button>X</button>
+        </td>
+        <td>
+          <a href="product.html">Xbox</a>
+        </td>
+        <td>560 $</td>
+        <td>
+          <form method="post">
+            <input type="number" id="quantity" name="quantity" min="1" value="1" step="1" size="2">
+            <input type="submit" value="Submit">
+          </form>
+        </td>
+        <td>560$</td>
+      </tr>
+      
+      <tr>
+        <td>
+          <button>X</button>
+        </td>
+        <td>
+          <a href="product.html">Ordinateur</a>
+        </td>
+        <td>720 $</td>
+        <td>
+          <form method="post">
+            <input type="number" id="quantity" name="quantity" min="1" value="1" step="1" size="2">
+            <input type="submit" value="Submit">
+          </form>
+        </td>
+        <td>720$</td>
+      </tr>
     </table>
 
-    <p>Total : xxxx$</p>
+    <p>Total : 1529$</p>
 
     <div><!--identifier la div-->
       <button>Vider le panier</button>
       <a href="order.html">Commander</a>
     </div>
   </div>
+
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
