--- a/tp1/index.html
+++ b/tp1/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!--Thomas Marinier 20269869 - Nesma-Dalel Medjber 20280609 - Yanis Chalel 20252292-->
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Accueil</title>
-</head>
+
+  <div id="logo">
+    <a href="test index.html">
+      <img src="./assets/img/logo.svg" alt="Logo de OnlineShop" width="300" height="100"> 
+    </a>
+  </div>
+</head>  
+
 <body>
+
   <header>
-    <div id="logo">
-      <img src="assets/img/logo.svg" alt="logo">
-    </div>
-
-    <div class="link">
-      <a href="index.html">Acceuil</a><br>
-      <a href="products.html">Produits</a><br>
-      <a href="contact.html">Contacts</a><br>
-      <a href="shopping-cart.html">Panier</a>
-    </div>
+    <nav>
+      <ul text-align="center">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="product.html">Produits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="shopping-cart.html">Panier</a></li>
+      </ul>
+    </nav> <hr /> 
   </header>
-  <div id="homeTitle">
-    <h1>OnlineShop</h1>
-  </div>
 
-  <div>
-    <p>
-      Magsin en ligne de produits électroniques</p>
-  </div>
+  <h1> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Bienvenue sur Online Shop! </h1>
+  <section>
+    <a href="product.html ">  
+      <img src="./assets/img/home.png"</section alt="Home image" width="300" height="200">
+    </a>
+  </section>
 
-  <div class="link">
-    <a href="products.html"> Liste des produits</a>
-  </div>
+  <p> Magasinez dès maintenant et découvrez notre vaste séléction de produits élétroniques incontournables!</p> <br>
+  <li> &nbsp; &nbsp;&nbsp; &nbsp;<a href="products.html"> Nos produits</a></li>
 
-  <img src="assets/img/home.png" alt="Home">
-
+  <br><br>
+  <hr />
+  
   <footer>
     <p>Thomas Marinier 20269869</p>
     <p>Nesma-Dalel Medjber 20280609</p>
-    <p>yanis Chalel 20252292</p>
+    <p>Yanis Chalel 20252292</p>
     <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
   </footer>
 </body>
