--- a/tp1/product.html
+++ b/tp1/product.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!--Thomas Marinier 20269869 - Nesma-Dalel Medjber 20280609 - Yanis Chalel 20252292-->
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Produit</title>
-</head>
+  
+  <div id="logo">
+    <a href="test index.html">
+      <img src="./assets/img/logo.svg" alt="Logo de OnlineShop" width="300" height="100"> 
+    </a>
+  </div>
+</head> 
+
 <body>
 
   <header>
-    <div id="logo">
-      <img src="assets/img/logo.svg" alt="logo">
-    </div>
-
-    <div class="link">
-      <a href="index.html">Acceuil</a><br>
-      <a href="products.html">Produits</a><br>
-      <a href="contact.html">Contacts</a><br>
-      <a href="shopping-cart.html">Panier</a>
-    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="product.html">Produits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="shopping-cart.html">Panier</a></li>
+      </ul> <hr /> 
+    </nav> <br> <br> <br> <br>
   </header>
 
-  <div class="presentoir">
+  <div id="presentoir">
     <h2>Apple-Tv</h2>
     <img src="assets/img/apple-tv.png" alt="apple-tv">
     <h4>249$</h4>
   </div>
 
 
-  <div class="Cararcteristics"> <!--Toutes les informations de cette liste on était receuillit sur https://support.apple.com/kb/SP769?locale=fr_FR-->
+  <div id="Cararcteristics"> <!--Toutes les informations de cette liste on était receuillit sur https://support.apple.com/kb/SP769?locale=fr_FR-->
     <h3>Fonctionnalités</h3>
     <ul style="list-style-type:disc;">
       <li>Technologie sans fil Bluetooth 4.0</li>
@@ -66,7 +73,7 @@
   <footer>
     <p>Thomas Marinier 20269869</p>
     <p>Nesma-Dalel Medjber 20280609</p>
-    <p>yanis Chalel 20252292</p>
+    <p>Yanis Chalel 20252292</p>
     <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
   </footer>
 </body>
