--- a/tp1/products.html
+++ b/tp1/products.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!--Thomas Marinier 20269869 - Nesma-Dalel Medjber 20280609 - Yanis Chalel 20252292-->
 
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Produits</title>
+  
+  <div id="logo">
+    <a href="test index.html">
+      <img src="./assets/img/logo.svg" alt="Logo de OnlineShop" width="300" height="100"> 
+    </a>
+  </div>
 </head>
 
 <body>
-  <header>
-    <div id="logo">
-      <img src="assets/img/logo.svg" alt="logo">
-    </div>
 
-    <div id="link">
-      <a href="index.html">Acceuil</a><br>
-      <a href="products.html">Produits</a><br>
-      <a href="contact.html">Contacts</a><br>
-      <a href="shopping-cart.html">Panier</a>
-    </div>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="product.html">Produits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="shopping-cart.html">Panier</a></li>
+      </ul> <hr /> 
+    </nav> <br> <br> <br> <br>
   </header>
+
+
   <div id="BarreLateral">
 
     <div id="productCategories">
@@ -60,34 +68,34 @@
     <div class="article">
       <h2>Canon mark II</h2>
       <img src="assets/img/camera-1.png" alt="canon1">
-      <h3>prix</h3>
+      <h3>1899.99</h3>
     </div>
 
     <div class="article">
       <h2>nikon</h2>
       <img src="assets/img/camera-2.png" alt="nikon">
-      <h3>prix</h3>
+      <h3>1149.40 $</h3>
     </div>
 
     <div class="article">
       <h2>Canon SD1300</h2>
       <img src="assets/img/camera-3.png" alt="canon2">
-      <h3>prix</h3>
+      <h3>275.20</h3>
     </div>
 
     <div class="article">
-      <h2></h2><!--https://www.avadirect.com/P770DM-G-Core-Processor-Intel-Z170-17-3-Full-HD-IPS-Matte-with-G-Sync-MXM-III-Graphics-Notebook-Barebone/Product/9994340-->
+      <h2>Ordinateur ASUS</h2><!--https://www.avadirect.com/P770DM-G-Core-Processor-Intel-Z170-17-3-Full-HD-IPS-Matte-with-G-Sync-MXM-III-Graphics-Notebook-Barebone/Product/9994340-->
       <img src="assets/img/laptop-1.png" alt="laptop-1">
-      <h3>prix</h3>
+      <h3>1245.25</h3>
     </div>
 
     <div class="article">
-      <h2></h2><!--https://pixabay.com/fr/photos/ordinateur-ordinateur-portable-1209746/-->
+      <h2>Ordinateur Lenovo</h2><!--https://pixabay.com/fr/photos/ordinateur-ordinateur-portable-1209746/-->
       <img src="assets/img/laptop-2.png" alt="laptop-2">
-      <h3>prix</h3>
+      <h3>899.99</h3>
     </div>
 
-    <!-- J'ai coder avant d'avoir fini de lire les consignes de cette pages, j'ai dpnc afficher plus que les les 6 porduit demander, j'ai donc mis le surplus en commentaire afin de le garder pour le TP2
+    <!-- J'ai coder avant d'avoir fini de lire les consignes de cette pages, j'ai donc afficher plus que les les 6 porduit demander, j'ai donc mis le surplus en commentaire afin de le garder pour le TP2
     <div class="article">
       <h2>Ecran Apple</h2>
       <img src="assets/img/mac.png" alt="mac">
@@ -135,7 +143,7 @@
   <footer>
     <p>Thomas Marinier 20269869</p>
     <p>Nesma-Dalel Medjber 20280609</p>
-    <p>yanis Chalel 20252292</p>
+    <p>Yanis Chalel 20252292</p>
     <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
   </footer>
 </body>
