--- a/tp1/confirmation.html
+++ b/tp1/confirmation.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-
 <html lang="fr">
-
+<!--Thomas Marinier 20269869 - Nesma-Dalel Medjber 20280609 - Yanis Chalel 20252292-->
+  
 <head>
-
   <meta charset="UTF-8">
-
   <title>OnlineShop - Confirmation</title>
 
-  <h1> OnlineShop </h1>
-
-</head>
+  <div id="logo">
+    <a href="test index.html">
+      <img src="./assets/img/logo.svg" alt="Logo de OnlineShop" width="300" height="100"> 
+    </a>
+  </div>
+</head> 
 
 <body>
 
   <header>
-    <div id="logo">
-      <img src="assets/img/logo.svg" alt="logo">
-    </div>
-
-    <div class="link">
-      <a href="index.html">Acceuil</a><br>
-      <a href="products.html">Produits</a><br>
-      <a href="contact.html">Contacts</a><br>
-      <a href="shopping-cart.html">Panier</a>
-    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="product.html">Produits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="shopping-cart.html">Panier</a></li>
+      </ul> <hr /> 
+    </nav> <br> <br> <br> <br>
   </header>
 
   <section id="confirmation">
-
     <h2>Confirmation d'achat</h2>
-
-    <p> Votre commande a été complétée avec succès. <br> 
-      Merci d'avoir commandé sur OnlineShop.
+    <p> <big> Votre commande a été complétée avec succès. <br> 
+      Merci d'avoir commandé sur OnlineShop. </big>
     </p>
+    <p> Votre numero de commande : <strong> n°763F89 </strong> </p>
   </section>
 
   <footer>
     <p>Thomas Marinier 20269869</p>
     <p>Nesma-Dalel Medjber 20280609</p>
-    <p>yanis Chalel 20252292</p>
+    <p>Yanis Chalel 20252292</p>
     <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
   </footer>
 </body>
