--- a/tp1/contact.html
+++ b/tp1/contact.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
+<!--Thomas Marinier 20269869 - Nesma-Dalel Medjber 20280609 - Yanis Chalel 20252292-->
+
 <head>
   <meta charset="UTF-8">
   <title>OnlineShop - Contact</title>
-</head>
-<body>
-  <header>
-    <div id="logo">
-      <img src="assets/img/logo.svg" alt="logo">
-    </div>
+  
+  <div id="logo">
+    <a href="test index.html">
+      <img src="./assets/img/logo.svg" alt="Logo de OnlineShop" width="300" height="100"> 
+    </a>
+  </div>
+</head>  
 
-    <div class="link">
-      <a href="index.html">Acceuil</a><br>
-      <a href="products.html">Produits</a><br>
-      <a href="contact.html">Contacts</a><br>
-      <a href="shopping-cart.html">Panier</a>
-    </div>
+<body>
+
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="product.html">Produits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="shopping-cart.html">Panier</a></li>
+      </ul>
+    </nav> <hr /> 
   </header>
-<!-- TODO -->
-<footer>
-  <p>Thomas Marinier 20269869</p>
-  <p>Nesma-Dalel Medjber 20280609</p>
-  <p>yanis Chalel 20252292</p>
-  <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
-</footer>
+
+   <section>
+    <h1> Contactez nous </h1>
+    <p> Vous avez des questions sur un produit ? Besoin d'aide avec le suivi d'une commande? </p> 
+    <ul> 
+      <li> 
+        <a href="mailto:onlineshop.contact@onlineshop.com">onlineshop.contact@mail.com</a>
+      </li>
+      <br>
+      <li>
+        <a href="tel:+15018200909">+1(501)820-0909</a> <p> -Service disponible entre 09:30am et 08:30pm-</p>
+      </li>
+
+   </section>
+<br> <br>
+   <section>
+     <i>105 rue du Corbeau, Montréal H9P2 Québec, Canada</i> 
+   </section>
+
+  <br><br><br><br>
+  <hr /> 
+
+  <footer>
+    <p>Thomas Marinier 20269869</p>
+    <p>Nesma-Dalel Medjber 20280609</p>
+    <p>Yanis Chalel 20252292</p>
+    <p>&copy; 2023 OnlineShop - Tous droits réservés</p>
+  </footer>
 </body>
 </html>
